2002-02-08  Braden McDaniel  <braden@endoframe.com>

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          configure.ac: AC_PREREQ should be first. fixed version.

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          openvrml-gl.pc openvrml.pc: fixed pkg-config compliance.

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          macros/gtkgl.m4: fixed OV_CHECK_GL macro name.

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          openvrml-core/java/vrml/Makefile.am
          openvrml-core/java/vrml/field/Makefile.am
          openvrml-core/java/vrml/node/Makefile.am: fixed non-installation
          of java files

2002-02-07  Braden McDaniel  <braden@endoframe.com>

        * Added a stylesheet for the Doxygen-generated docs.

2002-02-04  Braden McDaniel  <braden@endoframe.com>

        * Quell some Doxygen warningspew.

2002-02-03  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Fix bug 465024 dealing with MovieTexture nodes.

        * Add some more Javadoc comments.

        * Handle null CLASSPATH env. variable.

        * Fix bugs in JSAI MFString and MFColor creation.

2002-02-01  Braden McDaniel  <braden@endoframe.com>

        * Refactored code to check for self-references when assigning to
          fields of a Script node into methods on "ScriptNode".

        * Made "assignWithSelfRefCheck" methods on "ScriptNode" private.

        * Modified JavaScript binding code to use "ScriptNode::setField"
          (and thus "assignWithSelfRefCheck") when setting fields of the
          Script node.

2002-01-31  Braden McDaniel  <braden@endoframe.com>

        * Minor fix to JDK/JNI autoconf macro: just check for the
          "client" libjvm, not "classic".

        * Provide meta-data files for pkg-config instead of providing