@@ -1,3 +1,7 @@
+2002-02-09  Braden McDaniel  <braden@endoframe.com>
+
+        * "FieldValue::assign" can throw "std::bad_alloc", too.
+
 2002-02-08  Braden McDaniel  <braden@endoframe.com>
 
         * Applied patch from Frederic Devernay
